EogImage: Fix leaked GError when loading an SVG fails

Make sure the GError is not overwritten when closing the
handle if loading already failed earlier on.
This will handle SVG errors similar to errors from GdkPixbuf.

https://bugzilla.gnome.org/show_bug.cgi?id=770197